# ds4-dashboard

./: .env  DS4_HID_EXPLAINED.md  ICON_GUIDE.md  README.md  git-report.txt  index.html  output.txt  package-lock.json  package.json
.github/workflows/: release.yml
crates/ds4-hid/: Cargo.toml
crates/ds4-hid/src/: lib.rs
docs/: TASKBAR_ICON_FIX.md
docs/project-site/: package-lock.json  package.json
docs/project-site/src/app/: globals.css  layout.js  page.js
docs/project-site/src/components/: AnalogStick.jsx  CloneAuditPanel.jsx  FeatureGrid.jsx  Footer.jsx  GoogleAIOverview.jsx  Header.jsx  Hero.jsx  LongVersion.jsx  Showcase.jsx  (+5 more)
scripts/: release.cjs  release.js
src/: App.css  App.jsx  App.module.css  focus.css  index.css  layout.css  main.jsx  native.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  icon_utils.rs  lib.rs  main.rs  polling.rs  state.rs  tray_icon.rs
src/components/: ColorPicker.jsx  ColorPicker.module.css  DeviceInfoModal.jsx  DeviceInfoModal.module.css  Gauge.jsx  Gauge.module.css  Modal.jsx  Modal.module.css  Settings.jsx  Settings.module.css  SettingsModal.jsx  SettingsModal.module.css  StatusBadges.jsx  StatusBadges.module.css
src/components/settings/: AboutTab.jsx  AboutTab.module.css  EmulationTab.jsx  EmulationTab.module.css  GeneralTab.jsx  GeneralTab.module.css  SettingItem.jsx  SettingItem.module.css  TabNav.jsx  TabNav.module.css  TrayTab.jsx  TrayTab.module.css
src/constants/: icons.js
src/context/: ThemeContext.jsx
(+1 files in other folders)
